<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Calc</string>
    <string name="_9">9</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="stringa">-</string>
    <string name="x">X</string>
    <string name="clear">Clear</string>
    <string name="divide">/</string>
    <string name="add">+</string>
    <string name="equal">=</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="calculator">Calculator</string>
</resources>
